--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <p>Hello world</p> 
-
-  <!-- <p onclick=""></p> onclick - еще один вид использования (не распрастраненный, nts) -->
+  <p>Hello world!</p> 
 
   <script src="js/script.js"></script>
 </body>
